<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".RecordActivity">

    <!--Heading Text View-->
    <TextView
        android:id="@+id/txthead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/audio_recorder"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <!--This will display the status of our app when
        we will record some audio and play that audio-->
    <TextView
        android:id="@+id/idTVstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/status"
        android:textAlignment="center"
        android:textSize="24sp" />

    <!--Linear Layout for adding textviews
        in horizontal manner-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="4">

        <!--Textview to start audio recording
            drawableTop will add above mic image-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnRecord"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:padding="5dp"
                android:text="@string/start_recording"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/btnStop"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:padding="5dp"
                android:text="@string/stop_recording"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnPlay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:padding="5dp"
                android:text="@string/play_recording"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/btnStopPlay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:lines="2"
                android:padding="5dp"
                android:text="@string/stop_playing"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

        <!--Textview to stop audio recording
            drawableTop will add above mic image-->

        <!--Textview to play audio that is recorded
            drawableTop will add above mic image-->

        <!--Textview to pause the play of audio recording
            drawableTop will add above mic image-->

    </LinearLayout>
</RelativeLayout>