<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/well"
    android:orientation="vertical"
    android:padding="@dimen/body_padding"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="left"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/action_bar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            app:srcCompat="@drawable/back" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/well">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/well"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="Sign Up"
                android:textColor="#0A0072"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="We can't wait for you to join us. "
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView50"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="Secure your life "
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/body_item_margin"
                android:background="@color/well"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView11"
                    style="@style/form_title"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="First name" />

                <EditText
                    android:id="@+id/etFirstname"
                    style="@style/student_details_title_input"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/body_item_margin"
                android:background="@color/well"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    style="@style/form_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name" />

                <EditText
                    android:id="@+id/etLastname"

                    style="@style/student_details_title_input"

                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/body_item_margin"
                android:background="@color/well"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView13"
                    style="@style/form_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/student_details_title_input"

                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/body_item_margin"
                android:background="@color/well"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewfa13"
                    style="@style/form_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Phone" />

                <EditText
                    android:id="@+id/etPhone"
                    style="@style/student_details_title_input"

                    android:inputType="phone" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/body_item_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textVirew15"
                    style="@style/form_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/student_details_title_input"

                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingBottom="50dp">

                <Button
                    android:id="@+id/button3"
                    style="@style/button_1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="0"
                    android:onClick="btnSubmit"

                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/sign_up"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Existing User ?" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="gotoLogin"
                        android:text="  Login"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>